--- a/apps/svelte-example/package.json
+++ b/apps/svelte-example/package.json
@@ -14,6 +14,7 @@
     "@tsconfig/svelte": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "kagura-ui": "workspace:^1.0.0",
+    "kagura-ui-svelte": "workspace:^1.0.0",
     "postcss": "^8.4.18",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
