--- a/packages/kagura-ui/package.json
+++ b/packages/kagura-ui/package.json
@@ -2,7 +2,7 @@
   "name": "kagura-ui",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.cjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
