--- a/packages/kagura-ui/package.json
+++ b/packages/kagura-ui/package.json
@@ -1,13 +1,21 @@
 {
   "name": "kagura-ui",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.1-alpha",
+  "description": "Universal tailwindcss component",
   "main": "index.cjs",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": {},
+  "keywords": [
+    "tailwindcss",
+    "ui"
+  ],
+  "files": [
+    "./index.cjs"
+  ],
+  "author": {
+    "name": "Akhmad Salafudin",
+    "url": "https://github.com/axmad386",
+    "email": "axmad386@gmail.com"
   },
-  "keywords": [],
-  "author": "",
   "license": "MIT",
   "devDependencies": {
     "tailwindcss": "^3.2.2"
