--- a/apps/demo-svelte/package.json
+++ b/apps/demo-svelte/package.json
@@ -10,11 +10,12 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@kagura-ui/preset-bootstrap": "workspace:^0.0.1",
     "@kagura-ui/svelte": "workspace:^0.0.1",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "@tsconfig/svelte": "^3.0.0",
     "autoprefixer": "^10.4.13",
-    "kagura-ui": "workspace:^1.0.0",
+    "kagura-ui": "workspace:^0.0.1",
     "postcss": "^8.4.18",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
