--- a/packages/kagura-ui-preset-bootstrap/package.json
+++ b/packages/kagura-ui-preset-bootstrap/package.json
@@ -2,7 +2,7 @@
   "name": "@kagura-ui/preset-bootstrap",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index.cjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
