--- a/packages/kagura-ui/package.json
+++ b/packages/kagura-ui/package.json
@@ -1,15 +1,19 @@
 {
   "name": "kagura-ui",
-  "version": "0.0.1-alpha",
+  "version": "0.0.1",
   "description": "Universal tailwindcss component",
-  "main": "index.cjs",
-  "scripts": {},
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "typings": "dist/index.d.ts",
+  "scripts": {
+    "build": "rm -rf dist && rollup -c"
+  },
   "keywords": [
     "tailwindcss",
     "ui"
   ],
   "files": [
-    "./index.cjs"
+    "./dist/*"
   ],
   "author": {
     "name": "Akhmad Salafudin",
@@ -18,6 +22,14 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "tailwindcss": "^3.2.2"
+    "esbuild": "^0.15.13",
+    "rollup": "^3.2.5",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "tailwindcss": "^3.2.2",
+    "typescript": "^4.8.4"
+  },
+  "peerDependencies": {
+    "tailwindcss": "^3"
   }
 }
