--- a/packages/kagura-ui-preset-bootstrap/package.json
+++ b/packages/kagura-ui-preset-bootstrap/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@kagura-ui/preset-bootstrap",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.cjs",
+  "description": "Kagura UI preset bootstrap",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist && rollup -c"
   },
+  "files": [
+    "./dist/*"
+  ],
   "keywords": [],
   "author": "",
   "license": "MIT",
