--- a/apps/demo-svelte/package.json
+++ b/apps/demo-svelte/package.json
@@ -23,6 +23,10 @@
     "tailwindcss": "^3.2.2",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.0"
+    "vite": "^3.2.0",
+    "vite-plugin-pages-svelte": "^0.0.2"
+  },
+  "dependencies": {
+    "svelte-router-spa": "^6.0.3"
   }
 }
