--- a/packages/kagura-ui-preset-bootstrap/package.json
+++ b/packages/kagura-ui-preset-bootstrap/package.json
@@ -4,7 +4,7 @@
   "description": "Kagura UI preset bootstrap",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
-  "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "rm -rf dist && rollup -c"
   },
@@ -20,5 +20,8 @@
     "rollup-plugin-dts": "^5.0.0",
     "rollup-plugin-esbuild": "^5.0.0",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "kagura-ui": "workspace:^0.0.1"
   }
 }
