--- a/apps/demo-svelte/package.json
+++ b/apps/demo-svelte/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@kagura-ui/preset-bootstrap": "workspace:^0.0.1",
+    "@kagura-ui/preset-mantine": "workspace:^0.0.1",
     "@kagura-ui/svelte": "workspace:^0.0.1",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "@tsconfig/svelte": "^3.0.0",
