--- a/packages/kagura-ui-preset-mantine/package.json
+++ b/packages/kagura-ui-preset-mantine/package.json
@@ -8,8 +8,19 @@
   "scripts": {
     "build": "rm -rf dist && rollup -c"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    },
+    "./components": {
+      "import": "./dist/components/index.mjs",
+      "require": "./dist/components/index.cjs"
+    }
+  },
   "files": [
-    "./dist/*"
+    "./dist/*",
+    "./components.d.ts"
   ],
   "keywords": [],
   "author": "",
