--- a/packages/kagura-ui/package.json
+++ b/packages/kagura-ui/package.json
@@ -18,12 +18,14 @@
       "require": "./dist/index.cjs"
     },
     "./utils": {
+      "import": "./dist/utils.mjs",
       "require": "./dist/utils.cjs"
     }
   },
   "files": [
     "./dist/*",
-    "./contracts/*"
+    "./contracts/*",
+    "./utils.d.ts"
   ],
   "author": {
     "name": "Akhmad Salafudin",
@@ -32,6 +34,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash.merge": "^4.6.7",
+    "@types/underscore": "^1.11.4",
     "esbuild": "^0.15.13",
     "rollup": "^3.2.5",
     "rollup-plugin-dts": "^5.0.0",
@@ -41,5 +45,9 @@
   },
   "peerDependencies": {
     "tailwindcss": "^3"
+  },
+  "dependencies": {
+    "lodash.merge": "^4.6.2",
+    "underscore": "^1.13.6"
   }
 }
