--- a/packages/kagura-ui/package.json
+++ b/packages/kagura-ui/package.json
@@ -35,7 +35,6 @@
   "license": "MIT",
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
-    "@types/underscore": "^1.11.4",
     "esbuild": "^0.15.13",
     "rollup": "^3.2.5",
     "rollup-plugin-dts": "^5.0.0",
@@ -47,7 +46,6 @@
     "tailwindcss": "^3"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.2",
-    "underscore": "^1.13.6"
+    "lodash.merge": "^4.6.2"
   }
 }
