--- a/packages/kagura-ui-svelte/package.json
+++ b/packages/kagura-ui-svelte/package.json
@@ -2,7 +2,7 @@
 	"name": "@kagura-ui/svelte",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "svelte-kit sync && svelte-package --watch",
 		"build": "svelte-kit sync && svelte-package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
