--- a/packages/kagura-ui/package.json
+++ b/packages/kagura-ui/package.json
@@ -6,6 +6,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
+    "dev": "rm -rf dist && rollup -cw",
     "build": "rm -rf dist && rollup -c"
   },
   "keywords": [
