--- a/packages/kagura-ui-svelte/package.json
+++ b/packages/kagura-ui-svelte/package.json
@@ -7,7 +7,9 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
 	},
 	"svelte": "dist/index.js",
 	"main": "dist/index.js",
@@ -16,25 +18,37 @@
 		"./dist/*"
 	],
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "1.0.0-next.572",
-		"@sveltejs/package": "1.0.0-next.1",
+		"@storybook/addon-docs": "^6.5.15",
+		"@storybook/addon-essentials": "^7.0.0-beta.15",
+		"@storybook/addon-interactions": "^7.0.0-beta.15",
+		"@storybook/addon-links": "^7.0.0-beta.15",
+		"@storybook/addon-svelte-csf": "^2.0.10",
+		"@storybook/blocks": "^7.0.0-beta.15",
+		"@storybook/svelte": "^7.0.0-beta.15",
+		"@storybook/sveltekit": "^7.0.0-beta.15",
+		"@storybook/testing-library": "^0.0.13",
+		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/kit": "1.0.1",
+		"@sveltejs/package": "1.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
+		"babel-loader": "^8.3.0",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-storybook": "^0.6.8",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.54.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"storybook": "^7.0.0-beta.15",
+		"svelte": "^3.55.0",
 		"svelte-check": "^2.10.1",
+		"svelte-loader": "^3.1.4",
 		"svelte-preprocess": "^4.10.7",
-		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"tslib": "^2.4.1",
+		"typescript": "^4.8.4",
+		"vite": "^4.0.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"kagura-ui": "workspace:^0.0.1"
-	}
+	"type": "module"
 }
