--- a/packages/kagura-ui-svelte/package.json
+++ b/packages/kagura-ui-svelte/package.json
@@ -18,6 +18,7 @@
 		"./dist/*"
 	],
 	"devDependencies": {
+		"@kagura-ui/preset-mantine": "workspace:^0.0.1",
 		"@storybook/addon-docs": "^6.5.15",
 		"@storybook/addon-essentials": "^7.0.0-beta.15",
 		"@storybook/addon-interactions": "^7.0.0-beta.15",
@@ -32,11 +33,13 @@
 		"@sveltejs/package": "1.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
+		"autoprefixer": "^10.4.13",
 		"babel-loader": "^8.3.0",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-storybook": "^0.6.8",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.18",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"react": "^18.2.0",
@@ -46,9 +49,13 @@
 		"svelte-check": "^2.10.1",
 		"svelte-loader": "^3.1.4",
 		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.2.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.8.4",
 		"vite": "^4.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"kagura-ui": "workspace:^0.0.1"
+	}
 }
