--- a/packages/kagura-ui-svelte/package.json
+++ b/packages/kagura-ui-svelte/package.json
@@ -18,6 +18,7 @@
 		"./dist/*"
 	],
 	"devDependencies": {
+		"@kagura-ui/preset-bootstrap": "workspace:^0.0.1",
 		"@kagura-ui/preset-mantine": "workspace:^0.0.1",
 		"@storybook/addon-docs": "^6.5.15",
 		"@storybook/addon-essentials": "^7.0.0-beta.15",
@@ -44,7 +45,7 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"storybook": "^7.0.0-beta.15",
+		"storybook": "7.0.0-beta.15",
 		"svelte": "^3.55.0",
 		"svelte-check": "^2.10.1",
 		"svelte-loader": "^3.1.4",
