--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Kagura UI Mono Repo",
   "main": "index.js",
   "scripts": {
-    "dev:svelte": "pnpm -r dev & (sleep 10 && pnpm --filter '@kagura-ui/svelte' storybook)"
+    "dev:svelte": "pnpm dev:package & (sleep 15 && pnpm --filter '@kagura-ui/svelte' storybook)",
+    "dev:package": "pnpm --filter '@kagura-ui/*' dev"
   },
   "keywords": [],
   "author": "",
