--- a/packages/kagura-ui-svelte/package.json
+++ b/packages/kagura-ui-svelte/package.json
@@ -18,6 +18,7 @@
 		"./dist/*"
 	],
 	"devDependencies": {
+		"@iconify/svelte": "^3.0.1",
 		"@kagura-ui/preset-bootstrap": "workspace:^0.0.1",
 		"@kagura-ui/preset-mantine": "workspace:^0.0.1",
 		"@storybook/addon-docs": "7.0.0-beta.15",
