--- a/packages/kagura-ui-react/package.json
+++ b/packages/kagura-ui-react/package.json
@@ -1,27 +1,50 @@
 {
   "name": "@kagura-ui/react",
-  "version": "0.0.1",
-  "description": "Kagura UI React components",
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/types/index.d.ts",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist",
+    "/dist/style.css"
+  ],
   "scripts": {
-    "build": "rollup -c"
+    "build": "tsc && vite build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^10.0.1",
+    "@babel/core": "^7.20.5",
+    "@kagura-ui/preset-bootstrap": "workspace:^0.0.1",
+    "@kagura-ui/preset-mantine": "workspace:^0.0.1",
+    "@storybook/addon-essentials": "^7.0.0-beta.49",
+    "@storybook/addon-interactions": "^7.0.0-beta.49",
+    "@storybook/addon-links": "^7.0.0-beta.49",
+    "@storybook/blocks": "^7.0.0-beta.49",
+    "@storybook/react": "^7.0.0-beta.49",
+    "@storybook/react-vite": "^7.0.0-beta.49",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@types/react": "^18.0.26",
-    "rollup": "^3.2.5",
-    "rollup-plugin-dts": "^5.0.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4"
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "^8.3.0",
+    "concurrently": "^7.6.0",
+    "postcss": "^8.4.20",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "7.0.0-beta.49",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0",
+    "vite-plugin-dts": "^1.7.1",
+    "vite-tsconfig-paths": "^4.0.3"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "kagura-ui": "workspace:^0.0.1"
