--- a/packages/kagura-ui-core/package.json
+++ b/packages/kagura-ui-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kagura-ui",
+  "name": "@kagura-ui/core",
   "version": "0.0.1",
   "description": "Universal tailwindcss component",
   "main": "dist/index.cjs",
@@ -36,12 +36,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
-    "esbuild": "^0.15.13",
-    "rollup": "^3.2.5",
-    "rollup-plugin-dts": "^5.0.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "tailwindcss": "^3.2.2",
-    "typescript": "^4.8.4"
+    "esbuild": "^0.19.4",
+    "rollup": "^4.0.2",
+    "rollup-plugin-dts": "^6.0.2",
+    "rollup-plugin-esbuild": "^6.0.2",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "tailwindcss": "^3"
