--- a/packages/kagura-ui-preset-bootstrap/package.json
+++ b/packages/kagura-ui-preset-bootstrap/package.json
@@ -16,13 +16,13 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "esbuild": "^0.15.13",
-    "rollup": "^3.2.5",
-    "rollup-plugin-dts": "^5.0.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "typescript": "^4.8.4"
+    "esbuild": "^0.19.4",
+    "rollup": "^4.0.2",
+    "rollup-plugin-dts": "^6.0.2",
+    "rollup-plugin-esbuild": "^6.0.2",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "kagura-ui": "workspace:^0.0.1"
+    "@kagura-ui/core": "workspace:^0.0.1"
   }
 }
