--- a/packages/kagura-ui-react/package.json
+++ b/packages/kagura-ui-react/package.json
@@ -16,37 +16,37 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.23.0",
     "@kagura-ui/preset-bootstrap": "workspace:^0.0.1",
     "@kagura-ui/preset-mantine": "workspace:^0.0.1",
-    "@storybook/addon-essentials": "^7.0.0-beta.49",
-    "@storybook/addon-interactions": "^7.0.0-beta.49",
-    "@storybook/addon-links": "^7.0.0-beta.49",
-    "@storybook/blocks": "^7.0.0-beta.49",
-    "@storybook/react": "^7.0.0-beta.49",
-    "@storybook/react-vite": "^7.0.0-beta.49",
-    "@storybook/testing-library": "^0.0.14-next.1",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "babel-loader": "^8.3.0",
-    "concurrently": "^7.6.0",
-    "postcss": "^8.4.20",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/react": "^7.4.6",
+    "@storybook/react-vite": "^7.4.6",
+    "@storybook/testing-library": "^0.2.2",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.11",
+    "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.1",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "7.0.0-beta.49",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vite-plugin-dts": "^1.7.1",
-    "vite-tsconfig-paths": "^4.0.3"
+    "storybook": "7.4.6",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11",
+    "vite-plugin-dts": "^3.6.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "kagura-ui": "workspace:^0.0.1"
+    "@kagura-ui/core": "workspace:^0.0.1"
   }
 }
