--- a/packages/kagura-ui-svelte/package.json
+++ b/packages/kagura-ui-svelte/package.json
@@ -18,47 +18,47 @@
 		"./dist/*"
 	],
 	"devDependencies": {
-		"@floating-ui/dom": "^1.1.0",
-		"@iconify/svelte": "^3.0.1",
-		"@kagura-ui/preset-bootstrap": "workspace:^0.0.1",
-		"@kagura-ui/preset-mantine": "workspace:^0.0.1",
-		"@storybook/addon-docs": "7.0.0-beta.15",
-		"@storybook/addon-essentials": "^7.0.0-beta.15",
-		"@storybook/addon-interactions": "^7.0.0-beta.15",
-		"@storybook/addon-links": "^7.0.0-beta.15",
-		"@storybook/blocks": "^7.0.0-beta.15",
-		"@storybook/svelte": "^7.0.0-beta.15",
-		"@storybook/sveltekit": "^7.0.0-beta.15",
-		"@storybook/testing-library": "^0.0.13",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "1.0.1",
-		"@sveltejs/package": "1.0.1",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
-		"autoprefixer": "^10.4.13",
-		"babel-loader": "^8.3.0",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-storybook": "^0.6.8",
+		"@floating-ui/dom": "^1.5.3",
+		"@iconify/svelte": "^3.1.4",
+		"@kagura-ui/preset-bootstrap": "workspace:^",
+		"@kagura-ui/preset-mantine": "workspace:^",
+		"@storybook/addon-docs": "7.4.6",
+		"@storybook/addon-essentials": "^7.4.6",
+		"@storybook/addon-interactions": "^7.4.6",
+		"@storybook/addon-links": "^7.4.6",
+		"@storybook/blocks": "^7.4.6",
+		"@storybook/svelte": "^7.4.6",
+		"@storybook/sveltekit": "^7.4.6",
+		"@storybook/testing-library": "^0.2.2",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "1.25.1",
+		"@sveltejs/package": "2.2.2",
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
+		"@typescript-eslint/parser": "^6.7.4",
+		"autoprefixer": "^10.4.16",
+		"babel-loader": "^9.1.3",
+		"eslint": "^8.51.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-storybook": "^0.6.14",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.18",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
+		"postcss": "^8.4.31",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"storybook": "7.0.0-beta.15",
-		"svelte": "^3.55.0",
-		"svelte-check": "^2.10.1",
-		"svelte-loader": "^3.1.4",
-		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.2.2",
-		"tslib": "^2.4.1",
-		"typescript": "^4.8.4",
-		"vite": "^4.0.3"
+		"storybook": "7.4.6",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"svelte-floating-ui": "^1.5.3",
+		"svelte-loader": "^3.1.9",
+		"svelte-preprocess": "^5.0.4",
+		"tailwindcss": "^3.3.3",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.11"
 	},
 	"type": "module",
 	"dependencies": {
-		"kagura-ui": "workspace:^0.0.1",
-		"svelte-floating-ui": "^1.1.6"
+		"@kagura-ui/core": "workspace:^"
 	}
 }
