--- a/packages/kagura-ui-core/package.json
+++ b/packages/kagura-ui-core/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "rm -rf dist && rollup -cw",
-    "build": "rm -rf dist && rollup -c"
+    "build": "rm -rf dist && rollup -c",
+    "lint": "tsc --noEmit"
   },
   "keywords": [
     "tailwindcss",
