--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "scripts": {
     "dev:svelte": "pnpm dev:package & (sleep 15 && pnpm --filter '@kagura-ui/svelte' storybook)",
     "dev:react": "pnpm dev:package & (sleep 15 && pnpm --filter '@kagura-ui/react' storybook)",
-    "dev:package": "pnpm --filter kagura-ui dev & (sleep 5 && pnpm --filter '@kagura-ui/*' dev)"
+    "dev:package": "pnpm --filter kagura-ui dev & (sleep 5 && pnpm --filter '@kagura-ui/*' dev)",
+    "version:bump": "node version.mjs",
+    "sync": "syncpack fix-mismatches"
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "syncpack": "^11.2.1"
+  }
 }
